Footer background overlap bug on section previous.
Messing around with the background sections that overlap the footer.

The work around was to change the background to transparent. Havent done yet but borders are marked up and ready. Will come back to this section.

--- a/src/App.css
+++ b/src/App.css
@@ -94,8 +94,8 @@
 body {
   background-color: var(--primaryBackgroundColor);
   font-family: var(--font);
-  scroll-behavior: smooth;
   color: var(--bodyText);
+  
 }
 
 /* Section styles */
@@ -115,7 +115,7 @@ section {
   max-width: 65rem;
   width: 100%;
   height: 100%;
-  padding: 0 2%;
+  padding: 0 3%;
 }
 
 /* List styles */
