--- a/src/components/customerPlanOptions/CustomerPlanOptions.module.css
+++ b/src/components/customerPlanOptions/CustomerPlanOptions.module.css
@@ -177,7 +177,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-  margin-bottom: 19.24rem;
+  margin-bottom: 14.43rem;
 
   }
 
