--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -3,7 +3,7 @@
   height: 100%;
   width: 100%;
   margin-top: -4px;
-  /* start here */
+  border: 3px solid orange;
 }
 
 .footer-container {
@@ -11,6 +11,8 @@
   height: 29.375rem;
   display: flex;
   justify-content: center;
+  border: 3px solid pink;
+
 }
 
 .background-container {
@@ -22,11 +24,15 @@
   z-index: -1;
   overflow: hidden;
   background: var(--backgroundAssetOne);
+  border: 3px solid turquoise;
+
+
 }
 
 .footer-content {
   height: 100%;
   display: flex;
+  padding: 0 3%;
 }
 
 .footer-content-left {
@@ -39,6 +45,8 @@
 .toggle-content-container{
   position: relative;
   width: 5rem;
+  border: 2px solid pink;
+
 }
 
 .toggle-content {
@@ -295,3 +303,39 @@
   line-height: 1.25rem;
 }
 
+
+
+@media screen and (max-width: 1024px) {
+  .toggle-content-container{
+    display: none;
+  }
+
+
+
+  .footer-container{
+    height: fit-content;
+    
+  }
+
+  .background-container{
+    min-height: 100rem;
+  }
+
+.footer-content{
+  flex-direction: column;
+  height: auto;
+  padding: 4rem;
+}
+.footer-content-left{
+  flex-direction: column;
+  margin-top: 0;
+}
+
+.footer-content-right{
+  flex-direction: column;
+  align-items: start;
+  gap: 3rem;
+
+  
+}
+}
